Fix spacing between columns and fix navbar on mobile sites

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       </script>
       <header>
          <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+		 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
             <a class="navbar-brand" href="#">Johnny&#039s BBQ</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                <ul class="navbar-nav mr-auto">
@@ -59,7 +62,7 @@
             </div>
          </div>
          <div class="container marketing">
-            <div class="row">
+            <div class="row justify-content-between">
                <div class="col-lg-6">
                   <h2>Our Facebook Timeline</h2>
 				  <p>
