--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,9 @@
    <body>
       <header>
          <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+		    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
             <a class="navbar-brand" href="#">Johnny&#039s BBQ</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                <ul class="navbar-nav mr-auto">
