--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link href="css/coreStyle.css" rel="stylesheet">
-      <link href="css/carousel.css" rel="stylesheet">
+      <link href="css/core.css" rel="stylesheet">
       <link rel="icon" href="images/favicon/favicon.ico" />
    </head>
    <body>
