Change background image settings

--- a/index.html
+++ b/index.html
@@ -9,112 +9,116 @@
       <link rel="icon" href="images/favicon/favicon.ico" />
    </head>
    <body>
-      <script>(function(d, s, id) {
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) return;
-         js = d.createElement(s); js.id = id;
-         js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3';
-         fjs.parentNode.insertBefore(js, fjs);
-         }(document, 'script', 'facebook-jssdk'));
-      </script>
-      <header>
-         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Johnny&#039s BBQ</a>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-               <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                     <a class="nav-link active">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="menu">Menu</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact">Contact</a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <main role="main">
-         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <img class="second-slide" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t31.0-8/21083035_502884780044226_4192761718170739232_o.jpg?oh=a87d1bd8f1a959c16ebc24234d23b35b&oe=5B17D7B9" alt="Second slide">
-                  <div class="container">
-                     <div class="carousel-caption">
-                        <h1>Logo</h1>
-                        <p>Some text here</p>
+      <div id="background">
+         <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3';
+            fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+         </script>
+         <header>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+               </button>
+               <a class="navbar-brand" href="#">Johnny&#039s BBQ</a>
+               <div class="collapse navbar-collapse" id="navbarCollapse">
+                  <ul class="navbar-nav mr-auto">
+                     <li class="nav-item active">
+                        <a class="nav-link active">Home</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="menu">Menu</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="about">About</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="contact">Contact</a>
+                     </li>
+                  </ul>
+               </div>
+            </nav>
+         </header>
+         <main role="main">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <img class="second-slide" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t31.0-8/21083035_502884780044226_4192761718170739232_o.jpg?oh=a87d1bd8f1a959c16ebc24234d23b35b&oe=5B17D7B9" alt="Second slide">
+                     <div class="container">
+                        <div class="carousel-caption">
+                           <h1>Logo</h1>
+                           <p>Some text here</p>
+                        </div>
                      </div>
                   </div>
                </div>
             </div>
-         </div>
-         <div class="container marketing">
-            <div class="row justify-content-between">
-               <div class="col-lg-6">
-                  <h2>Our Facebook Timeline</h2>
-				  <p>
-                    <div id="fb-root"></div>					
-                    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
-                     <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
-                    </div>
-                  </p>				  
-                  <p><a class="btn btn-secondary" href="https://www.facebook.com/johnnysbbqri/" role="button">Visit our facebook page &raquo;</a></p>
+            <div class="container marketing">
+               <div class="row justify-content-between">
+                  <div class="col-lg-6">
+                     <h2>Our Facebook Timeline</h2>
+                     <p>
+                     <div id="fb-root"></div>
+                     <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
+                        <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
+                     </div>
+                     </p>				  
+                     <p><a class="btn btn-secondary" href="https://www.facebook.com/johnnysbbqri/" role="button">Visit our facebook page &raquo;</a></p>
+                  </div>
+                  <div class="col-lg-6">
+                     <h2>Events</h2>
+                     <p>
+                     <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+                        <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
+                     </div>
+                     </p>
+                  </div>
                </div>
-			   <div class="col-lg-6">
-                  <h2>Events</h2>
-				  <p>
-                    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote></div>
-                  </p>
+               <hr class="featurette-divider">
+               <div class="row featurette">
+                  <div class="col-md-7">
+                     <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
+                     <p class="lead">Some text here</p>
+                  </div>
+                  <div class="col-md-5">
+                     <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/21106636_503560136643357_1001100613805513275_n.jpg?oh=3455410e43280a16171fb0581d5024d0&oe=5B113EAD" alt="Generic placeholder image">
+                  </div>
                </div>
+               <hr class="featurette-divider">
+               <div class="row featurette">
+                  <div class="col-md-7 order-md-2">
+                     <h2 class="featurette-heading">Text<span class="text-muted">Here</span></h2>
+                     <p class="lead">Some text here</p>
+                  </div>
+                  <div class="col-md-5 order-md-1">
+                     <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/20953482_500823176917053_7630167713371175399_n.jpg?oh=ee0cfa615975f5c7ff1e4ac7f76a017d&oe=5B16EB10" alt="Generic placeholder image">
+                  </div>
+               </div>
+               <hr class="featurette-divider">
+               <div class="row featurette">
+                  <div class="col-md-7">
+                     <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
+                     <p class="lead">Subtext</p>
+                  </div>
+                  <div class="col-md-5">
+                     <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/20708160_496443890688315_6944719276660879903_n.jpg?oh=9d708c7cb4ed8c8b460e107cd92dc2f5&oe=5B16C892" alt="Generic placeholder image">
+                  </div>
+               </div>
+               <hr class="featurette-divider">
             </div>
-            <hr class="featurette-divider">
-            <div class="row featurette">
-               <div class="col-md-7">
-                  <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
-                  <p class="lead">Some text here</p>
-               </div>
-               <div class="col-md-5">
-                  <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/21106636_503560136643357_1001100613805513275_n.jpg?oh=3455410e43280a16171fb0581d5024d0&oe=5B113EAD" alt="Generic placeholder image">
-               </div>
-            </div>
-            <hr class="featurette-divider">
-            <div class="row featurette">
-               <div class="col-md-7 order-md-2">
-                  <h2 class="featurette-heading">Text<span class="text-muted">Here</span></h2>
-                  <p class="lead">Some text here</p>
-               </div>
-               <div class="col-md-5 order-md-1">
-                  <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/20953482_500823176917053_7630167713371175399_n.jpg?oh=ee0cfa615975f5c7ff1e4ac7f76a017d&oe=5B16EB10" alt="Generic placeholder image">
-               </div>
-            </div>
-            <hr class="featurette-divider">
-            <div class="row featurette">
-               <div class="col-md-7">
-                  <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
-                  <p class="lead">Subtext</p>
-               </div>
-               <div class="col-md-5">
-                  <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/20708160_496443890688315_6944719276660879903_n.jpg?oh=9d708c7cb4ed8c8b460e107cd92dc2f5&oe=5B16C892" alt="Generic placeholder image">
-               </div>
-            </div>
-            <hr class="featurette-divider">
-         </div>
-         <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>
-               &copy; 2017-<script>document.write(new Date().getFullYear())</script> Johnny&#039s BBQ
-            </p>
-         </footer>
-      </main>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <footer class="container">
+               <p class="float-right"><a href="#">Back to top</a></p>
+               <p>
+                  &copy; 2017-<script>document.write(new Date().getFullYear())</script> Johnny&#039s BBQ
+               </p>
+            </footer>
+         </main>
+         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      </div>
    </body>
 </html>
