--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                <div class="col-lg-6">
                   <h2>Our Facebook Timeline</h2>
                   <p>
-                  <div id="fb-root"></div>
+                  <div id="fb-root border border-white"></div>
                   <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
                      <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
                   </div>
