--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
          </div>
          <div class="container marketing">
             <div class="row justify-content-between">
-               <div class="col-lg-6">
+               <div class="col-lg-6 border border-white">
                   <h2>Our Facebook Timeline</h2>
                   <p>
-                  <div id="fb-root border border-white"></div>
+                  <div id="fb-root"></div>
                   <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
                      <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
                   </div>
                   </p>				  
                   <p><a class="btn btn-secondary" href="https://www.facebook.com/johnnysbbqri/" role="button">Visit our facebook page &raquo;</a></p>
                </div>
-               <div class="col-lg-6">
+               <div class="col-lg-6 border border-white">
                   <h2>Events</h2>
                   <p>
                   <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
