--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             </div>
          </div>
          <div class="container marketing">
-            <div class="row justify-content-between">
-               <div class="col-lg-6 border border-white">
+            <div class="row">
+               <div class="col-lg-4">
                   <h2>Our Facebook Timeline</h2>
                   <p>
                   <div id="fb-root"></div>
@@ -68,7 +68,7 @@
                   </p>				  
                   <p><a class="btn btn-secondary" href="https://www.facebook.com/johnnysbbqri/" role="button">Visit our facebook page &raquo;</a></p>
                </div>
-               <div class="col-lg-6 border border-white">
+               <div class="col-lg-4 offset-md-4">
                   <h2>Events</h2>
                   <p>
                   <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
