--- a/index.html
+++ b/index.html
@@ -53,26 +53,26 @@
          <div class="container marketing">
             <div class="row">
                <div class="col-lg-5">
-                  <h2>Our Facebook Timeline</h2>
-                  <p>
-                  <div id="fb-root"></div>
-                  <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
-                     <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
-                  </div>
+                  <p class="container-background">
+                    <h2>Our Facebook Timeline</h2>
+				    <div id="fb-root"></div>
+				    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
+					  <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
+				    </div>
                   </p>				  
                   <p><a class="btn btn-secondary" href="https://www.facebook.com/johnnysbbqri/" role="button">Visit our facebook page &raquo;</a></p>
                </div>
                <div class="col-lg-5 offset-md-2">
-                  <h2>Events</h2>
-                  <p>
-                  <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
-                     <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
-                  </div>
+                  <p class="container-background">
+                    <h2>Events</h2>
+                    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+                      <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
+                    </div>
                   </p>
                </div>
             </div>
             <hr class="featurette-divider">
-            <div class="row featurette">
+            <div class="row featurette container-background">
                <div class="col-md-7">
                   <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
                   <p class="lead">Some text here</p>
