--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <h2>Our Facebook Timeline</h2>
                   <p>
 				    <div id="fb-root"></div>
-				    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-hide-cover="true" data-show-facepile="false">
+				    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-height="500" data-hide-cover="true" data-show-facepile="false">
 					  <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
 				    </div>
                   </p>				  
@@ -68,7 +68,7 @@
 			     <div class="container-background">
                   <h2>Events</h2>
                   <p>
-                    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+                    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="events" data-small-header="true" data-width="500" data-height="500" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
                       <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
                     </div>
                   </p>
