Fix featurette backgrounds

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                   <h2>Our Facebook Timeline</h2>
                   <p>
 				    <div id="fb-root"></div>
-				    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-height="500" data-hide-cover="true" data-show-facepile="false">
+				    <div class="fb-page" data-href="https://www.facebook.com/johnnysbbqri" data-tabs="timeline" data-small-header="true" data-width="500" data-height="500" data-hide-cover="true" data-hide-cover="false" data-show-facepile="false">
 					  <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
 				    </div>
-                  </p>				  
+                  </p>	  
                   <p><a class="btn btn-secondary" href="https://www.facebook.com/johnnysbbqri/" role="button">Visit our facebook page &raquo;</a></p>
 				  </div>
                </div>
@@ -72,11 +72,13 @@
                       <blockquote cite="https://www.facebook.com/johnnysbbqri" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/johnnysbbqri">Johnny&#039;s BBQ</a></blockquote>
                     </div>
                   </p>
+				  <p><a class="btn btn-secondary" href="https://www.facebook.com/pg/johnnysbbqri/events/" role="button">Check out our events &raquo;</a></p>
 				  </div>
                </div>
             </div>
             <hr class="featurette-divider">
-            <div class="row featurette container-background">
+            <div class="row featurette">
+			  <div class="container-background">
                <div class="col-md-7">
                   <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
                   <p class="lead">Some text here</p>
@@ -84,9 +86,11 @@
                <div class="col-md-5">
                   <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/21106636_503560136643357_1001100613805513275_n.jpg?oh=3455410e43280a16171fb0581d5024d0&oe=5B113EAD" alt="Generic placeholder image">
                </div>
+			  </div>
             </div>
             <hr class="featurette-divider">
             <div class="row featurette">
+			  <div class="container-background">
                <div class="col-md-7 order-md-2">
                   <h2 class="featurette-heading">Text<span class="text-muted">Here</span></h2>
                   <p class="lead">Some text here</p>
@@ -94,9 +98,11 @@
                <div class="col-md-5 order-md-1">
                   <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/20953482_500823176917053_7630167713371175399_n.jpg?oh=ee0cfa615975f5c7ff1e4ac7f76a017d&oe=5B16EB10" alt="Generic placeholder image">
                </div>
+			  </div>
             </div>
             <hr class="featurette-divider">
             <div class="row featurette">
+			  <div class="container-background">
                <div class="col-md-7">
                   <h2 class="featurette-heading">Some text here <span class="text-muted">Some text here</span></h2>
                   <p class="lead">Subtext</p>
@@ -105,6 +111,7 @@
                   <img class="featurette-image img-fluid mx-auto" src="https://scontent.fewr1-3.fna.fbcdn.net/v/t1.0-9/20708160_496443890688315_6944719276660879903_n.jpg?oh=9d708c7cb4ed8c8b460e107cd92dc2f5&oe=5B16C892" alt="Generic placeholder image">
                </div>
             </div>
+			</div>
             <hr class="featurette-divider">
          </div>
          <footer class="container">
