Add logo and fix mobile navbar

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       </script>
       <header>
          <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Johnny&#039s BBQ</a>
+            <a class="navbar-brand" href="#"><img src="images/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">Johnny&#039s BBQ</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
