--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>Johnny&#039;s BBQ - Home</title>
 	  <meta name="description" content="Johnny&#039s BBQ is a local bbq restaurant.">
-      <meta name="keywords" content="BBQ,RI,Ribs,Wings,Johnny&#039s BBQ,Rhode Island">
+      <meta name="keywords" content="BBQ,RI,Ribs,Wings,Johnny&#039s BBQ,Rhode Island,Brisket">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
