--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 						        </div>
 						    </div>
 						    <div class="meta-text mt-30 text-center">
-							    <h4>Ethel Davis</h4>
-							    <p>Managing Director (Sales)</p>									    	
+							    <h4>Eric Gesualdi</h4>
+							    <p>slays</p>									    	
 						    </div>
 						</div>
 						<div class="col-md-3 single-team">
