--- a/index.html
+++ b/index.html
@@ -372,8 +372,13 @@
 				<div class="container-fluid">
 					<div class="row align-items-center d-flex justify-content-start">
 						<div class="col-lg-6 col-md-12 contact-left no-padding">
-	      					<div style=" width:100%;
-	                height: 545px;" id="map"></div>
+	      					<div style=" width:100%;height:100%;" id="map">
+								<div class="mapouter">
+									<div class="gmap_canvas">
+										<iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=johnnys%20victory%20diner&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="col-lg-4 col-md-12 pt-100 pb-100">
 							<form class="form-area" id="myForm" action="https://formspree.io/johnnysbbqri13@gmail.com" method="post" enctype="text/plain" class="contact-form text-right">
@@ -409,8 +414,7 @@
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
 								</p>
 								<p class="number">
-									012-6532-568-9746 <br>
-									012-6532-569-9748
+									(401) 765-2661
 								</p>
 							</div>
 						</div>						
@@ -443,7 +447,7 @@
             <p class="footer-text m-0">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/montysvictorydiner/"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-dribbble"></i></a>
 							<a href="#"><i class="fa fa-behance"></i></a>
@@ -456,7 +460,7 @@
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+			<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script> -->
   			<script src="js/easing.min.js"></script>			
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>	
