Fix images and contacts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <a class="navbar-brand d-xl-none d-lg-none d-md-block d-sm-block" href="/">
         <img src="assets/images/restaurant/logo.png" alt="Instant Logo" class="light">
-        <img src="assets/images/restaurant/logo-dark.png" alt="Instant Logo" class="dark">
+        <img src="assets/images/restaurant/logo.png" alt="Instant Logo" class="dark">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-navbar" aria-controls="probootstrap-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="ion-navicon"></i></span>
@@ -36,7 +36,7 @@
             <li class="nav-item logo-center d-xl-block d-lg-block d-md-none d-sm-none d-none">
               <a class="nav-link text-uppercase pb_letter-spacing-2" href="index.html">
               <img src="assets/images/restaurant/logo.png" alt="Instant Logo" class="light">
-              <img src="assets/images/restaurant/logo-dark.png" alt="Instant Logo" class="dark">
+              <img src="assets/images/restaurant/logo.png" alt="Instant Logo" class="dark">
               </a>
             </li>
             <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-gallery">Gallery</a></li>
@@ -51,12 +51,11 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-9  order-md-1">
-            <a href="https://vimeo.com/channels/staffpicks/93951774" class="play popup-vimeo"><i class="ion-ios-play"></i></a>
-            <h2 class="heading mb-3">The Lean Restaurant</h2>
+            <h2 class="heading mb-3">Johnny&#039;s Victory Diner</h2>
             <div class="sub-heading">
-              <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p class="mb-5">*insert text explaining the restaurant here*</p>
             </div>
-            <p><a href="#section-contact" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">Reserve a table</a></p>
+            <p><a href="#section-menu" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">View our menu</a></p>
           </div>
         </div>
       </div>
@@ -552,7 +551,7 @@
             <div class="col-md-7">
               <div class="row">
                 <div class="col-md">
-                  <div class="text-center">Trip Advisor</div>
+                  <div class="text-uppercase">Trip Advisor</div>
                   <div id="TA_cdswritereviewlg801" class="TA_cdswritereviewlg">
                     <ul id="FpnVzb" class="TA_links TYQwE9nELF">
                       <li id="tXDlL4m" class="14FW2pU2mqh">
@@ -562,18 +561,18 @@
                   </div>
                 </div>
                 <div class="col-md">
-				  <div class="text-center">Facebook</div>
+				  <div class="text-uppercase">Facebook</div>
 				  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmontysvictorydiner%2F&tabs&width=300&height=200&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
               </div>
               <div class="row">
 			    <div class="col-md">
-				  <div class="text-center">Facebook</div>
-                  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmontysvictorydiner%2F&tabs&width=300&height=200&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+				  <div class="text-uppercase">Yelp</div>
 				</div>
 			    <div class="col-md">
-				  <div class="text-center">Facebook</div>
-				  <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmontysvictorydiner%2F&tabs&width=300&height=200&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+				  <div class="text-uppercase">Contact Us</div>
+				  <p>Email: <a href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
+				  <p>Phone: (401)-765-2661</p>
 				</div>
               </div>
             </div>
