update menu with sample items

--- a/index.html
+++ b/index.html
@@ -95,26 +95,26 @@
           <div class="col">
             <ul class="nav justify-content-center pb_tab_v1">
               <li class="nav-item">
-                <a class="nav-link active p-3" data-toggle="list" href="#food" role="tab">Food</a>
+                <a class="nav-link active p-3" data-toggle="list" href="#breakfast" role="tab">Breakfast</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" data-toggle="list" href="#drinks" role="tab">Drinks</a>
+                <a class="nav-link p-3" data-toggle="list" href="#lunch" role="tab">Lunch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" data-toggle="list" href="#salads" role="tab">Salads</a>
+                <a class="nav-link p-3" data-toggle="list" href="#bbq" role="tab">BBQ</a>
               </li>
             </ul>
             <!-- Tab panes -->
             <div class="tab-content">
-              <div class="tab-pane fade show active" id="food" role="tabpanel">
+              <div class="tab-pane fade show active" id="breakfast" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
                     <ul class="list-unstyled pb_food-menu">
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Eggplant Parmiagana</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">Omelet</h3>
+                            <p class="mb-0">with bacon and erics toast</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>13.95</span></div>
                         </div>
@@ -190,15 +190,15 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane fade" id="drinks" role="tabpanel">
+              <div class="tab-pane fade" id="lunch" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
                     <ul class="list-unstyled pb_food-menu">
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fountain Soda</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
+                            <h3 class="pb_font-18 font-weight-bold">Burger</h3>
+                            <p class="mb-0">with fries</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>10.95</span></div>
                         </div>
@@ -274,15 +274,15 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane fade" id="salads" role="tabpanel">
+              <div class="tab-pane fade" id="bbq" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
                     <ul class="list-unstyled pb_food-menu">
                       <li>
                         <div class="row">
                           <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Caesars Salad</h3>
-                            <p class="mb-0">Romaine lettuce, croutons, and grated cheese</p>
+                            <h3 class="pb_font-18 font-weight-bold">Pulled Pork</h3>
+                            <p class="mb-0">with bbq sauce</p>
                           </div>
                           <div class="col-lg-2"><span class="price"><sup>$</sup>13.95</span></div>
                         </div>
