--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
               <div class="row">
 			    <div class="col-md">
 				  <div class="text-uppercase">Yelp</div>
+                  <div id="yelp-biz-badge-rrc-4rR-Nq2f9EHFxEqm-QpQqQ"><a href="http://yelp.com/biz/johnny-s-victory-diner-burrillville?utm_medium=badge_star_rating_reviews&amp;utm_source=biz_review_badge" target="_blank"><img id="yelpLogo" src="https://dyn.yelpcdn.com/extimg/en_US/rrc/4rR-Nq2f9EHFxEqm-QpQqQ.png"></img></a></div>
 				</div>
 			    <div class="col-md">
 				  <div class="text-uppercase">Contact Us</div>
@@ -581,7 +582,7 @@
         <div class="pb_half py-5">
 		  <div class="row justify-content-center">
             <div class="col-md-10 text-center">
-              <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Maps</h2>
+              <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Directions</h2>
             </div>
           </div>
 		  <div class="row justify-content-md-center" style="height:85%">
